# test-cosm-wasm-contract

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  test-cosm-wasm-contract.wasm  test_cosm_wasm.wasm
src/: contract.rs  lib.rs  msg.rs  test.rs
