[package]
name = "test-cosm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.2"
serde = { version = "1.0.144", features = ["derive"] }
cw-storage-plus = "0.15.0"
schemars = "0.8.15"
cosmwasm-schema = "1.4.1"
thiserror = "1.0.50"

[dev-dependencies]
osmosis-test-tube = { git = "https://github.com/oraichain/test-tube.git", rev = "2d5ebe0" }
test-tube = { git = "https://github.com/oraichain/test-tube.git", rev = "2d5ebe0" }
